# cloud-native-file-operations-platform

./: .gitignore  Cloud-native File Operations Platform - Developer Specification.docx  Cloud-native File Operations Platform - Technical Specification.docx  LICENSE  README.md
.github/: security.md
.github/workflows/: security-scan.yml
.kiro/specs/cloud-native-file-operations/: design.md  tasks.md
docs/: ARCHITECTURE.md  DEPLOYMENT.md
docs/api/: openapi.yaml
infrastructure/monitoring/: docker-compose.monitoring.yml
infrastructure/monitoring/alertmanager/: alertmanager.yml
infrastructure/monitoring/jaeger/: jaeger-config.yml
infrastructure/monitoring/prometheus/: prometheus.yml
infrastructure/scripts/: cleanup.sh  deploy.bat  deploy.sh
infrastructure/terraform/: main.tf  outputs.tf  pgp-key.pub  terraform.tfvars.example  variables.tf
sdks/python/: pyproject.toml
sdks/python/fileops/: __init__.py  auth.py  client.py  errors.py  files.py  notifications.py  processing.py  types.py
sdks/typescript/src/: auth.ts  client.ts  errors.ts  files.ts  http.ts  index.ts  notifications.ts  processing.ts  types.ts
services/api-gateway/: .env.example  README.md  app.yaml
services/api-gateway/src/: index.ts
services/auth-service/: app.yaml
services/file-service/: app.yaml  go.mod  main.go  simple_integration_test.go  simple_performance_test.go
services/notification-service/: jest.config.js
services/processing-service/: __init__.py  app.yaml  config.py  main.py  models.py  pytest.ini  requirements.txt
shared/security/: jest.config.js
shared/types/: index.ts
shared/utils/: constants.ts
specs/: requirements.md  tasks.md
web-interface/: .eslintrc.cjs  DEMO_MODE.md  README.TESTING.md  TESTING-STATUS.md  app.yaml  cypress.config.ts  index.html  package.json.test-scripts  vite.config.ts
web-interface/src/: App.test.tsx  App.tsx  main.tsx
(+198 files in other folders)
